[package]
name = "firefox_matchbox_minimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
matchbox_socket = { git = "https://github.com/johanhelsing/matchbox" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bevy_egui = "0.14"
urlencoding = "2.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
